--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                                     <span class="fa fa-star-o"></span>
                                     <span class="fa fa-star-o"></span>
                                 </div>
-                                <p><span>$659</span> / PER </p>
+                                <p><span>₹659</span> / PER </p>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                             <div class="package-info">
@@ -500,7 +500,7 @@
                                     <span class="fa fa-star-o"></span>
                                     <span class="fa fa-star-o"></span>
                                 </div>
-                                <p><span>$659</span> / PER </p>
+                                <p><span>₹659</span> / PER </p>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                             <div class="package-info">
@@ -525,7 +525,7 @@
                                     <span class="fa fa-star-o"></span>
                                     <span class="fa fa-star-o"></span>
                                 </div>
-                                <p><span>$659</span> / PER </p>
+                                <p><span>₹659</span> / PER </p>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                             <div class="package-info">
@@ -550,7 +550,7 @@
                                     <span class="fa fa-star-o"></span>
                                     <span class="fa fa-star-o"></span>
                                 </div>
-                                <p><span>$659</span> / PER </p>
+                                <p><span>₹659</span> / PER </p>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                             <div class="package-info">
@@ -583,7 +583,7 @@
                         <div class="deals-item-outer">
                             <div class="deals-image">
                                 <img src="images/deal1.jpg" alt="Image">
-                                <span class="deal-price">$8600</span>
+                                <span class="deal-price">₹8600</span>
                             </div>
                             <div class="deal-content">
                                 <div class="deal-rating">
@@ -605,7 +605,7 @@
                         <div class="deals-item-outer">
                             <div class="deals-image">
                                 <img src="images/deal2.jpg" alt="Image">
-                                <span class="deal-price">$8600</span>
+                                <span class="deal-price">₹8600</span>
                             </div>
                             <div class="deal-content">
                                 <div class="deal-rating">
@@ -627,7 +627,7 @@
                         <div class="deals-item-outer">
                             <div class="deals-image">
                                 <img src="images/deal3.jpg" alt="Image">
-                                <span class="deal-price">$8600</span>
+                                <span class="deal-price">₹8600</span>
                             </div>
                             <div class="deal-content">
                                 <div class="deal-rating">
@@ -672,7 +672,7 @@
                 <div class="col-lg-6">
                     <div class="ad-price  wow  animate__rotateIn" data-wow-delay="2500ms" data-wow-duration="1000ms" >
                         <div class="ad-price-inner">
-                            <span>Starting at <span class="rate">$300</span></span>
+                            <span>Starting at <span class="rate">₹300</span></span>
                         </div>
                     </div>
                 </div>
@@ -700,7 +700,7 @@
                         <div class="destination-content-1">
                             <div class="destination-upper">
                                 <h4><a href="#">Lake Tohoe Adventure</a></h4>
-                                <p class="top-price"><span>$659</span> / PER </p>
+                                <p class="top-price"><span>₹659</span> / PER </p>
                             </div>
                             <div class="destination-lower clearfix">
                                 <p class="package-days"><i class="flaticon-time"></i> 5 days</p>
@@ -723,7 +723,7 @@
                         <div class="destination-content-1">
                             <div class="destination-upper">
                                 <h4><a href="#">Lake Tohoe Adventure</a></h4>
-                                <p class="top-price"><span>$659</span> / PER </p>
+                                <p class="top-price"><span>₹659</span> / PER </p>
                             </div>
                             <div class="destination-lower clearfix">
                                 <p class="package-days"><i class="flaticon-time"></i> 5 days</p>
@@ -746,7 +746,7 @@
                         <div class="destination-content-1">
                             <div class="destination-upper">
                                 <h4><a href="#">Lake Tohoe Adventure</a></h4>
-                                <p class="top-price"><span>$659</span> / PER </p>
+                                <p class="top-price"><span>₹659</span> / PER </p>
                             </div>
                             <div class="destination-lower clearfix">
                                 <p class="package-days"><i class="flaticon-time"></i> 5 days</p>
@@ -921,8 +921,8 @@
                             </div>
                         </div>
                         <div class="sale-tag">
-                            <span class="old-price">$1449</span>
-                            <span class="new-price"> $900</span>
+                            <span class="old-price">₹1449</span>
+                            <span class="new-price"> ₹900</span>
                         </div>
                         <div class="sale-overlay"></div>
                     </div>
@@ -948,8 +948,8 @@
                             </div>
                         </div>
                         <div class="sale-tag">
-                            <span class="old-price">$1449</span>
-                            <span class="new-price"> $900</span>
+                            <span class="old-price">₹1449</span>
+                            <span class="new-price"> ₹900</span>
                         </div>
                         <div class="sale-overlay"></div>
                     </div>
@@ -975,8 +975,8 @@
                             </div>
                         </div>
                         <div class="sale-tag">
-                            <span class="old-price">$1449</span>
-                            <span class="new-price"> $900</span>
+                            <span class="old-price">₹1449</span>
+                            <span class="new-price"> ₹900</span>
                         </div>
                         <div class="sale-overlay"></div>
                     </div>
@@ -1002,8 +1002,8 @@
                             </div>
                         </div>
                         <div class="sale-tag">
-                            <span class="old-price">$1449</span>
-                            <span class="new-price"> $900</span>
+                            <span class="old-price">₹1449</span>
+                            <span class="new-price"> ₹900</span>
                         </div>
                         <div class="sale-overlay"></div>
                     </div>
