--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> Yatra - Travel Agency HTML Template</title>
+    <title>TOURS & TRAVELS</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!--Custom CSS-->
@@ -1270,6 +1270,4 @@
     <script src="js/custom-swiper2.js"></script>
     <script src="js/custom-countdown.js"></script>
 </body>
-
-<!-- Mirrored from htmldesigntemplates.com/html/yatra/bootstrap4/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 31 May 2021 10:34:31 GMT -->
 </html>
